--- a/css/styles.css
+++ b/css/styles.css
@@ -377,6 +377,7 @@ img {
 
 .form-footer {
   display: flex;
+  gap: 24px;
   align-items: self-end;
 }
 
@@ -388,9 +389,12 @@ img {
   padding: 8px 16px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: transparent;
-  margin-right: 24px;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
   color: #fff;
 }
+
 .form-footer-input::placeholder {
   font-size: 12px;
   line-height: 2;
@@ -400,10 +404,11 @@ img {
 .footer-btn {
   display: flex;
   align-items: center;
-  gap: 16px;
+  justify-content: center;
+
   border-radius: 4px;
   padding: 8px 24px;
-  width: 165px;
+  min-width: 165px;
   height: 40px;
   background: #4d5ae5;
   font-weight: 500;
@@ -412,6 +417,7 @@ img {
   letter-spacing: 0.04em;
   text-align: center;
   color: #fff;
+  border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-btn:hover,
@@ -420,6 +426,7 @@ img {
 }
 .footer-send {
   fill: #fff;
+  margin-left: 16px;
 }
 
 /* OVERLAY */
