--- a/css/styles.css
+++ b/css/styles.css
@@ -626,7 +626,7 @@ textarea:focus::placeholder {
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
-  display: flex;
+  /* display: flex; */
   align-items: center;
 }
 .check-text-link {
