--- a/css/styles.css
+++ b/css/styles.css
@@ -280,7 +280,7 @@ img {
 }
 .team-icon-link:hover,
 .team-icon-link:focus {
-  background-color: #404bbf;
+  background-color: #31d0aa;
 }
 .portfolio-list {
   display: flex;
@@ -353,7 +353,7 @@ img {
   flex-direction: column;
   justify-content: center;
   align-items: start;
-  margin-right: 80px;
+  /* margin-right: 80px; */
 }
 .footer-social-p {
   font-weight: 500;
@@ -372,13 +372,14 @@ img {
 
 .team-icon-link.footer:hover,
 .team-icon-link.footer:focus {
-  background-color: #404bbf;
+  background-color: #31d0aa;
 }
-
+.footer-form {
+  margin-left: auto;
+}
 .form-footer {
   display: flex;
   gap: 24px;
-  align-items: self-end;
 }
 
 .form-footer-input {
@@ -401,6 +402,11 @@ img {
   letter-spacing: 0.04em;
   color: #fff;
 }
+.form-footer-input:focus,
+.form-footer-input:hover {
+  border: 1px solid #31d0aa;
+}
+
 .footer-btn {
   display: flex;
   align-items: center;
@@ -422,7 +428,7 @@ img {
 }
 .footer-btn:hover,
 .footer-btn:focus {
-  background-color: #404bbf;
+  background-color: #31d0aa;
 }
 .footer-send {
   fill: #fff;
@@ -436,7 +442,7 @@ img {
   top: 0;
   position: fixed;
   background-color: rgba(46, 47, 66, 0.4);
-
+  visibility: hidden;
   opacity: 0;
   pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -445,6 +451,7 @@ img {
 
 .backdrop.is-open {
   opacity: 1;
+  visibility: visible;
   pointer-events: auto;
 }
 .modal {
@@ -462,6 +469,9 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.backdrop:not(.is-open) .modal {
+  transform: translate(-50%, -50%) scale(1.5);
+}
 .modal-close-btn {
   position: absolute;
   padding: 0;
@@ -492,6 +502,7 @@ img {
 .modal-close-btn:focus .modal-close-icon {
   fill: #ffffff;
 }
+
 .form-title {
   font-weight: 500;
   font-size: 16px;
@@ -626,7 +637,6 @@ textarea:focus::placeholder {
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
-  /* display: flex; */
   align-items: center;
 }
 .check-text-link {
